--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.homeWrapper{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: #fff;
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
+.formWrapper{
+  background: #111211;
+  padding: 20px;
+  border-radius: 10px;
+  width: 400px;
+  max-width: 90%;
 }
+.inputGroup{
+  display: flex;
+  flex-direction: column;
+}
+.mainLabel{
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+.homePageLogo{
+  height: 80px;
+  margin-bottom: 30px;
+}
+.inputBox{
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  margin-bottom: 14px;
+  background: rgb(230, 228, 228);
+  font-size: 16px;
+  font-weight: bold;
+}
+.btn{
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.joinBtn ,.leaveBtn{
+  background: #4aed88;
+  width: 100px;
+  margin-left: auto;
+}
+.joinBtn:hover, .leaveBtn:hover{
+  background-color: #2b824c;
+}
+.createInfo{
+  margin: 0 auto;
+  margin-top: 20px;
+}
+.createNewBtn{
+  color: #4aed88;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  margin-left: 5px;
+  cursor: pointer;
+}
+.createNewBtn:hover, footer a:hover{
+  color: #368654;
+  border-color: #368654;
+}
+footer{
+  position: fixed;
+  bottom: 0;
+}
+footer a{
+  color: #4aee88;
+}
+.mainWrap{
+  display:grid;
+  grid-template-columns: 230px 1fr;
+  height: 100vh;
+}
+.aside{
+  background: #1c1e29;
+  padding: 16px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+.asideInner{
+  flex: 1;
+}
+.clientList{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.client{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-weight: bold;
+  cursor: pointer;
+}
+.userName{
+  margin-top: 10px;
+}
+.logo{
+  border-bottom: 1px solid #424242;
+  padding-bottom: 10px;
+}
+.logoImage{
+  height: 60px;
+}
+.leaveBtn{
+  margin-top: 10px;
+  width: 100%;
+}
+.leaveBtn:hover{
+  background: #FF0000;
+}
+.CodeMirror{
+   min-height: 90vh;
+   font-size: 20px;
+   line-height: 1.6;
+   padding-top: 20px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
